--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.23.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "sort-by": "^0.0.2",
     "swiper": "^11.1.4"
